--- a/Correlacao_e_Regressao.ipynb
+++ b/Correlacao_e_Regressao.ipynb
@@ -1583,14 +1583,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "ulha75EgcakC"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "amostra = dados.query('Renda < 5000').sample(n = 20, random_state=101)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1604,7 +1606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1614,8 +1616,83 @@
     "id": "hU6Ca7k3cakE",
     "outputId": "a0890859-c040-4d87-deed-7bcd6ce5c8b4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Idade</th>\n",
+       "      <th>Renda</th>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <th>Altura</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Idade</th>\n",
+       "      <td>134.410526</td>\n",
+       "      <td>-4947.968421</td>\n",
+       "      <td>-16.410526</td>\n",
+       "      <td>0.016506</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Renda</th>\n",
+       "      <td>-4947.968421</td>\n",
+       "      <td>764668.326316</td>\n",
+       "      <td>2209.021053</td>\n",
+       "      <td>-7.138236</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Anos de Estudo</th>\n",
+       "      <td>-16.410526</td>\n",
+       "      <td>2209.021053</td>\n",
+       "      <td>16.936842</td>\n",
+       "      <td>0.111281</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Altura</th>\n",
+       "      <td>0.016506</td>\n",
+       "      <td>-7.138236</td>\n",
+       "      <td>0.111281</td>\n",
+       "      <td>0.003354</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      Idade          Renda  Anos de Estudo    Altura\n",
+       "Idade            134.410526   -4947.968421      -16.410526  0.016506\n",
+       "Renda          -4947.968421  764668.326316     2209.021053 -7.138236\n",
+       "Anos de Estudo   -16.410526    2209.021053       16.936842  0.111281\n",
+       "Altura             0.016506      -7.138236        0.111281  0.003354"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amostra[['Idade', 'Renda', 'Anos de Estudo', 'Altura']].cov() "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1629,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1639,8 +1716,21 @@
     "id": "iG3mpmBfcakH",
     "outputId": "cf9885ba-996a-4254-85b3-e190a31556f3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "134.4105263157895"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "amostra.Idade.var()"
+   ]
   },
   {
    "cell_type": "markdown",
