Obtendo os coeficientes de regrassão manualmente

--- a/Correlacao_e_Regressao.ipynb
+++ b/Correlacao_e_Regressao.ipynb
@@ -2868,7 +2868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2878,8 +2878,22 @@
     "id": "ZcHOhSNRcalE",
     "outputId": "8a21ac4b-34d6-4139-cef4-6a3a79dd240f"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = len(dataset)\n",
+    "n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2893,7 +2907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2903,8 +2917,22 @@
     "id": "wfY4FHLgcalG",
     "outputId": "7034961e-e69c-424b-8a81-ef3443856811"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100556"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOMA_Y = dataset.Y.sum()\n",
+    "SOMA_Y"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2918,7 +2946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2928,8 +2956,22 @@
     "id": "vgRIhNl9calI",
     "outputId": "58ef8ded-cbde-440a-a2ed-4f6c1e1b49a3"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "303275"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOMA_X = dataset.X.sum()\n",
+    "SOMA_X"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2943,7 +2985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2954,12 +2996,90 @@
     "outputId": "4c12972c-6ba0-43e7-b6f2-92692723a752",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Y</th>\n",
+       "      <th>X</th>\n",
+       "      <th>X2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3011</td>\n",
+       "      <td>9714</td>\n",
+       "      <td>94361796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>3728</td>\n",
+       "      <td>13897984</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1879</td>\n",
+       "      <td>6062</td>\n",
+       "      <td>36747844</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2654</td>\n",
+       "      <td>8845</td>\n",
+       "      <td>78234025</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2849</td>\n",
+       "      <td>8378</td>\n",
+       "      <td>70190884</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Y     X        X2\n",
+       "0  3011  9714  94361796\n",
+       "1  1305  3728  13897984\n",
+       "2  1879  6062  36747844\n",
+       "3  2654  8845  78234025\n",
+       "4  2849  8378  70190884"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['X2'] = dataset.X ** 2\n",
+    "dataset.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2969,12 +3089,26 @@
     "id": "ce-I43picalL",
     "outputId": "da5633b5-6ec6-4b44-e4cf-c7dabe6f351d"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2198628939"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOMA_X2 = dataset.X2.sum()\n",
+    "SOMA_X2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -2984,8 +3118,22 @@
     "id": "TAiTZKfOcalM",
     "outputId": "c4b00b99-d659-4306-d3e1-1177e24bd193"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2198628939"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOMA_X2 = dataset.X.apply(lambda x: x**2).sum()\n",
+    "SOMA_X2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -2999,7 +3147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3009,8 +3157,22 @@
     "id": "gYc_poUmcalN",
     "outputId": "b8a0cc3e-6c2f-41cf-aaba-6e3ca3246c74"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "234954332"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOMA_Y2 = dataset.Y.apply(lambda y: y**2).sum()\n",
+    "SOMA_Y2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3024,7 +3186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3035,12 +3197,96 @@
     "outputId": "b2542e6c-a49d-4f55-bec6-b1f12abfad21",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Y</th>\n",
+       "      <th>X</th>\n",
+       "      <th>X2</th>\n",
+       "      <th>XY</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3011</td>\n",
+       "      <td>9714</td>\n",
+       "      <td>94361796</td>\n",
+       "      <td>29248854</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>3728</td>\n",
+       "      <td>13897984</td>\n",
+       "      <td>4865040</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1879</td>\n",
+       "      <td>6062</td>\n",
+       "      <td>36747844</td>\n",
+       "      <td>11390498</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2654</td>\n",
+       "      <td>8845</td>\n",
+       "      <td>78234025</td>\n",
+       "      <td>23474630</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2849</td>\n",
+       "      <td>8378</td>\n",
+       "      <td>70190884</td>\n",
+       "      <td>23868922</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Y     X        X2        XY\n",
+       "0  3011  9714  94361796  29248854\n",
+       "1  1305  3728  13897984   4865040\n",
+       "2  1879  6062  36747844  11390498\n",
+       "3  2654  8845  78234025  23474630\n",
+       "4  2849  8378  70190884  23868922"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset['XY'] = dataset.X * dataset.Y\n",
+    "dataset.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3050,12 +3296,26 @@
     "id": "s1NNuoM4calQ",
     "outputId": "cc080b68-6635-47c4-bc48-157801759ea6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "716683794"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOMA_XY = dataset.XY.sum()\n",
+    "SOMA_XY"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3065,12 +3325,26 @@
     "id": "fwAWf3SScalR",
     "outputId": "4dff48a5-a69a-47b4-e7d2-09a0ea60756c"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "716683794"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "SOMA_XY = dataset.apply(lambda data: data.X * data.Y, axis=1).sum()\n",
+    "SOMA_XY"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3080,8 +3354,80 @@
     "id": "_6-qQG_ucalS",
     "outputId": "f4eaf5ce-1f26-4812-9455-17e5a18f9c9e"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Y</th>\n",
+       "      <th>X</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3011</td>\n",
+       "      <td>9714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1305</td>\n",
+       "      <td>3728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1879</td>\n",
+       "      <td>6062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2654</td>\n",
+       "      <td>8845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2849</td>\n",
+       "      <td>8378</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Y     X\n",
+       "0  3011  9714\n",
+       "1  1305  3728\n",
+       "2  1879  6062\n",
+       "3  2654  8845\n",
+       "4  2849  8378"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset.drop(['X2', 'XY'], axis=1, inplace=True)\n",
+    "dataset.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3097,7 +3443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3107,8 +3453,24 @@
     "id": "UY-nWn7LcalU",
     "outputId": "de545732-ffe4-4095-f42d-0c3bf6680fbb"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29729069099372424"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numerador = n * SOMA_XY - SOMA_X * SOMA_Y\n",
+    "denominador = n * SOMA_X2 - (SOMA_X) ** 2\n",
+    "beta_2 = numerador / denominador\n",
+    "beta_2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3129,7 +3491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3139,8 +3501,22 @@
     "id": "-Gjc1ra5calW",
     "outputId": "a469f5b7-eb58-4891-e618-6959ad1a6d39"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "207.90331377756547"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_1 = dataset.Y.mean() - beta_2 * dataset.X.mean()\n",
+    "beta_1"
+   ]
   },
   {
    "cell_type": "markdown",
