Obtendo os coeficientes de regressão com statsmodels

--- a/Correlacao_e_Regressao.ipynb
+++ b/Correlacao_e_Regressao.ipynb
@@ -3541,18 +3541,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "QnYZ2T-7calZ"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import statsmodels.api as sm"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3563,11 +3565,14 @@
     "outputId": "6278704b-b319-4d83-97da-74b5eccd66ec"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Y = dataset.Y\n",
+    "X = sm.add_constant(dataset.X)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3578,12 +3583,30 @@
     "outputId": "ddb0fe1f-f4a5-47c6-f957-2f3d23b86765",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3011\n",
+       "1    1305\n",
+       "2    1879\n",
+       "3    2654\n",
+       "4    2849\n",
+       "Name: Y, dtype: int64"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3594,8 +3617,79 @@
     "outputId": "f306e7c0-5af3-4f45-cfe7-59b948470d80",
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>const</th>\n",
+       "      <th>X</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>9714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6062</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8845</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>8378</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   const     X\n",
+       "0    1.0  9714\n",
+       "1    1.0  3728\n",
+       "2    1.0  6062\n",
+       "3    1.0  8845\n",
+       "4    1.0  8378"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3609,14 +3703,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "CGGritStcalh"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "resultado_regressao = sm.OLS(Y, X, missing='drop').fit()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3630,7 +3726,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "207.90331377756547"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3640,42 +3756,47 @@
     "id": "Ye2sF_ygcalj",
     "outputId": "d0e2d875-011a-4b71-8ff8-de0ace39e866"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.29729069099372424"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_2"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 35
-    },
-    "colab_type": "code",
-    "id": "5RGcqao9call",
-    "outputId": "f39c311b-499b-4317-d0ed-5cb7c488739a"
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "const    207.903314\n",
+       "X          0.297291\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_regressao.params"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 71
-    },
-    "colab_type": "code",
-    "id": "RUScqQ1dcalm",
-    "outputId": "3a6a0609-1ca3-45c1-9a7d-15108f072def"
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3685,12 +3806,34 @@
     "id": "9geqX6FScaln",
     "outputId": "44cdde13-3662-49c7-84e9-ef4159ef9ec6"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_40753/1119274202.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  beta_1 = resultado_regressao.params[0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "207.90331377756553"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_1 = resultado_regressao.params[0]\n",
+    "beta_1"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3700,8 +3843,30 @@
     "id": "U238WwEVcalo",
     "outputId": "f305705c-639c-417b-e930-f5adaaccd216"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_40753/347530712.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "  beta_2 = resultado_regressao.params[1]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.29729069099372435"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "beta_2 = resultado_regressao.params[1]\n",
+    "beta_2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -3715,7 +3880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -3725,8 +3890,61 @@
     "id": "-VrPhUV8calp",
     "outputId": "48df0d6d-8ef8-4a6f-9f14-d45e0b8ab341"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>const</th>\n",
+       "      <td>107.116864</td>\n",
+       "      <td>308.689763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>X</th>\n",
+       "      <td>0.282092</td>\n",
+       "      <td>0.312490</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                0           1\n",
+       "const  107.116864  308.689763\n",
+       "X        0.282092    0.312490"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_regressao.conf_int(alpha=0.05)"
+   ]
   },
   {
    "cell_type": "markdown",
