--- a/Correlacao_e_Regressao.ipynb
+++ b/Correlacao_e_Regressao.ipynb
@@ -6433,7 +6433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 118,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6443,12 +6443,25 @@
     "id": "kGfJb7gVtd-E",
     "outputId": "9b34f5b1-7d78-4517-8312-f3d15e03d495"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31739163.242480807"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_regressao.mse_model"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6458,12 +6471,25 @@
     "id": "v-ano9jmtd-H",
     "outputId": "6862bb3b-9d90-4c4d-c1d1-cfbed8ca3f67"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20520.542448316486"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_regressao.mse_resid"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 121,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6473,12 +6499,26 @@
     "id": "9vtS-VQ2td-I",
     "outputId": "499ecc2b-55b5-4bac-e7e7-8c96cd5ad8c4"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1546.7019608482476"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F = resultado_regressao.mse_model / resultado_regressao.mse_resid\n",
+    "F"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6488,8 +6528,21 @@
     "id": "w8yfK5k1td-K",
     "outputId": "1db698d3-dc70-42a0-f5bc-2018f01e9d10"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1546.7019608482476"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_regressao.fvalue"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -6503,7 +6556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6513,23 +6566,38 @@
     "id": "XTl2Y4u5td-K",
     "outputId": "15bac85a-aca4-45e9-dedd-fb6b1f700c1d"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5555432285859935e-38"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "resultado_regressao.f_pvalue"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "OWswoJrHtd-M"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import f"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 125,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -6539,8 +6607,46 @@
     "id": "GH127n5atd-O",
     "outputId": "b20fd8f7-f9a7-4c1a-891c-770b722080ed"
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.5555432285859935e-38"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_valor = f.sf(F, 1, 48)\n",
+    "p_valor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "OWswoJrHtd-M"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 126,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_valor <= 0.05"
+   ]
   },
   {
    "cell_type": "code",
